# teamalpha-mcp

./: .gitignore  CLIENT_SETUP.md  Dockerfile  GETTING_STARTED.md  INDEX.md  INTERACTIVE_CLIENT.md  LAUNCH_GUIDE.md  LMSTUDIO_CHECKLIST.md  LMSTUDIO_INTEGRATION.md  LMSTUDIO_INTEGRATION_COMPLETE.md  LMSTUDIO_READY.md  LMSTUDIO_SETUP.md  MCP_QUICK_REFERENCE.md  MCP_SUMMARY.md  PROJECT_STARTUP_GUIDE.md  README.md  README_INTERACTIVE.md  README_STRUCTURE.md  RESTRUCTURING_COMPLETE.md  STRUCTURE_GUIDE.md  TEAM_GUIDE.md  THEAGAME_ANALYSIS.md  WHAT_IS_BUILT.md  WORKFLOW_ANALYSIS_20251122_112632.md  client.py  compose.yaml  crew.py  demo_workflows.py  docker-compose.yml  interactive_client.py  mcp.json  mcp_agent.py  mcp_executor_agent.py  mcp_langchain_agent.py  mcp_tool_demo.py  mcp_workflow_example.py  pyproject.toml  quickstart.py  request_poem.py  run-client.sh  (+4 more)
config/: agents.yaml  tasks.yaml
docs/: DEV_RUN.md  MCP_ARCHITECTURE.md  MCP_INTEGRATION_GUIDE.md
examples/: example_team.py  run_team_on_prod.py
infrastructure/: docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
projects/demo-api-service/: QUICKSTART.md  README.md  project.yaml  tools.yaml
projects/demo-api-service/output/: .gitkeep
projects/demo-api-service/workflows/: __init__.py
projects/greenfield-starter/: project.yaml  run.py  team.yaml
projects/theagame-analysis/: TEAM_RUN_REPORT_20251122_144558.md  THEAGAME_PROD_ANALYSIS.md  analyze_theagame.py  analyze_theagame_prod.py
src/teamalpha/: agent.py  client.py  llm_config.py  lmstudio.py  team.py
tools/: workflow_analyzer.py
(+1 files in other folders)
